--- a/Changes
+++ b/Changes
@@ -1,19 +1,27 @@
 Revision history for Perl extension FlatFile::DataStore.
 
+0.07 Tue Mar 17 23:40:25 EDT 2009
+    - properly recorded oldupd/olddel in appropriate toc file
+
 0.06 Tue Mar 17 22:53:43 EDT 2009
     - added numrecs to toc file
     - blocked delete if record already deleted
+
 0.05 Tue Mar 17 09:14:55 EDT 2009
     - added prerequisites to Makefile.PL
+
 0.04 Mon Mar 16 23:43:04 EDT 2009
     - added Tutorial.pm and FMTEYEWTK.pm to MANIFEST
     - otherwise, no code changes from 0.02 below
+
 0.03 Mon Mar 16 16:19:22 EDT 2009
-    - corrected MANIFEST to include Toc.pm and additional tests :-(
+    - corrected MANIFEST to include Toc.pm and additional tests
     - otherwise no code changes from 0.02 below
+
 0.02  Mon Feb 23 14:17:54 EST 2009
     - added POD
     - added Toc.pm
+
 0.01  Mon Feb 23 14:16:56 2009
     - original version; created by h2xs 1.23 with options
         -AX --skip-exporter --use-new-tests -n FlatFile::DataStore
