Import of BBAXTER/FlatFile-DataStore-1.02 from CPAN.
gitpan-cpan-distribution: FlatFile-DataStore
gitpan-cpan-version:      1.02
gitpan-cpan-path:         BBAXTER/FlatFile-DataStore-1.02.tar.gz
gitpan-cpan-author:       BBAXTER
gitpan-cpan-maturity:     released

--- a/Changes
+++ b/Changes
@@ -1,5 +1,8 @@
 Revision history for Perl extension FlatFile::DataStore.
 
+1.02 Thu Jan 20 15:20:48 EST 2011
+    - fix binmode in read_file() (to correct failing tests under windows)
+
 1.01 Fri Jan 14 18:42:32 EST 2011
     - minor doc fixes
 
